fixed bottom footer line and nav bar spacing on desktop

--- a/chamber/styles/desktop.css
+++ b/chamber/styles/desktop.css
@@ -1,8 +1,6 @@
 @media (min-width: 1500px){
     .header_img, .footer_img{
-        float: left;
-        height: 150px;
-        padding: 5px;
+        height: 120px;
     }
     
     #today{
@@ -24,8 +22,8 @@
     }
     
     nav {
-        margin: auto;
         padding: 1rem;
+        margin-right: 50px;
     }
     
     nav ul li:hover{
@@ -155,7 +153,7 @@
     display: none;
   }
   
-  #navbar{
+#navbar{
     display: flex;
     flex-direction: row;
   }
